# vktrace-arm

./: .gitmodules  BUILD.md  CMakeLists.txt  README.md  USAGE_android.md  USAGE_linux.md  Usage.txt  align8_vulkan_header.sh  build_vktrace.sh  update_external_sources.bat  update_external_sources.sh  vulkan_structs_padding_i386.h
arm_wayland/lib_arm64/: libwayland-client.so.0  libwayland-cursor.so.0  libwayland-egl.so.1
build-android/: AndroidManifest.xml  android-generate.bat  android-generate.sh  build_all.sh  build_vkreplay.sh  build_vktracereplay.bat  build_vktracereplay.sh  glslang_revision_android  install_all.sh  replay_trace.sh  shaderc_revision_android  spirv-headers_revision_android  spirv-tools_revision_android  update_external_sources_android.sh  vktracereplay.sh  vulkan-loader_url_android
build-android/jni/: Android.mk  Application.mk
build-android/vkreplay/: AndroidManifest.xml
build-android/vkreplayui/: settings.gradle
cmake/: FindVulkan.cmake  linux_aarch64.cmake  linux_arm.cmake
layer_factory/: CMakeLists.txt
layer_factory/demo_layer/: demo.cpp  demo.h
layer_factory/starter_layer/: memory_allocation_stats.h
layersvt/: CMakeLists.txt  VkLayer_api_cost.def  VkLayer_api_cost.json.in  VkLayer_api_dump.json.in  VkLayer_device_simulation.def  VkLayer_device_simulation.json.in  VkLayer_emptydriver.def  VkLayer_emptydriver.json.in  VkLayer_hwcprofiler.def  VkLayer_hwcprofiler.json.in  VkLayer_monitor.json.in  VkLayer_screenshot.json.in  api_cost.h  api_dump.h  dev_sim_compatmode.cpp  dev_sim_compatmode.h  dev_sim_ext_features.cpp  dev_sim_ext_features.h  device_simulation.cpp  monitor.cpp  screenshot.cpp  vk_layer_settings.txt  vktrace_emptydriver.h
layersvt/hwc_profiler/: hwcProfiler.cpp  hwcProfiler.h
layersvt/offscreenlayer/: VkLayer_offscreenrender.def  VkLayer_offscreenrender.json.in  headless_surface.cpp  headless_surface.h  headless_swapchain.cpp  headless_swapchain.h  offscreen_render.cpp  offscreen_render.h  offscreenrender_layer.md
layersvt/systrace/: VkLayer_systrace.def  VkLayer_systrace.json.in  vktrace_systrace.h
scripts/: api_cost_generator.py  api_dump_generator.py  common_codegen.py  emptydriver_generator.py  gpu_profile_merger.py  known_good.json  layer_factory_generator.py  systrace_generator.py  tool_helper_file_generator.py  update_deps.py  vk_struct_member_generator.py  vktrace_file_generator.py  vlf_makefile_generator.py  vt_genvk.py
via/: CMakeLists-SDK.txt  CMakeLists.txt
vkconfig/: CMakeLists.txt
vktrace/: CMakeLists.txt  LICENSE
vktrace/vktrace_common/: CMakeLists.txt  arm_headless_ext.h  compressor.h  decompressor.h  vktrace_common.h  vktrace_filelike.c  vktrace_filelike.h  vktrace_interconnect.c  vktrace_interconnect.h  vktrace_metadata.cpp  vktrace_metadata.h  vktrace_multiplatform.h  vktrace_pageguard_memorycopy.cpp  vktrace_platform.c  vktrace_platform.h  vktrace_process.c  vktrace_process.h  vktrace_settings.c  vktrace_settings.h  vktrace_trace_packet_identifiers.h  vktrace_trace_packet_utils.c  vktrace_trace_packet_utils.h  vktrace_version.h  vulkan_device_util.cpp  vulkan_device_util.h
vktrace/vktrace_common/compression/: compressor.cpp  decompressor.cpp  lz4compressor.cpp  lz4compressor.h  lz4decompressor.cpp  lz4decompressor.h  snpcompressor.cpp  snpcompressor.h  snpdecompressor.cpp  snpdecompressor.h
vktrace/vktrace_dump/: CMakeLists.txt  vktracedump_main.cpp  vktracedump_main.h
vktrace/vktrace_layer/: CMakeLists.txt  VkLayer_vktrace_layer.def  VkLayer_vktrace_layer.json.in  vktrace_lib.c  vktrace_lib_helpers.h  vktrace_lib_pageguard.cpp  vktrace_lib_pageguard.h  vktrace_lib_pageguardcapture.cpp  vktrace_lib_pageguardcapture.h  vktrace_lib_pageguardmappedmemory.cpp  vktrace_lib_pageguardmappedmemory.h  vktrace_lib_trace.cpp  vktrace_lib_trim.cpp  vktrace_lib_trim.h  vktrace_lib_trim_build_as.cpp  vktrace_lib_trim_build_as.h  vktrace_lib_trim_cmdbuild_as.cpp  vktrace_lib_trim_cmdbuild_as.h  vktrace_lib_trim_descriptoriterator.cpp  vktrace_lib_trim_descriptoriterator.h  vktrace_lib_trim_generate.cpp  vktrace_lib_trim_generate.h  vktrace_lib_trim_statetracker.cpp  vktrace_lib_trim_statetracker.h  vktrace_lib_trim_utils.cpp  vktrace_lib_trim_utils.h  vktrace_vk_exts.cpp
vktrace/vktrace_replay/: CMakeLists.txt  arm_headless_ext.h  vkreplay.cpp  vkreplay.h  vkreplay_dmabuffer.h  vkreplay_factory.cpp  vkreplay_factory.h  vkreplay_main.cpp  vkreplay_main.h  vkreplay_objmapper_class_defs.h  vkreplay_pipelinecache.cpp  vkreplay_pipelinecache.h  vkreplay_preload.cpp  vkreplay_preload.h  vkreplay_raytracingpipeline.cpp  vkreplay_seq.cpp  (+12 more)
vktrace/vktrace_rq_pp/: CMakeLists.txt  as_dedicate_memory.cpp  exclude_as.cpp  find_as_flush.cpp  find_as_unmap.cpp  find_sbt.cpp  remove_capture_replay_bit.cpp  remove_dummy_build_as.cpp  remove_unused_memory.cpp  vktrace_rq_pp.h  vktrace_rq_pp_main.cpp
vku/: CMakeLists.txt
(+24 files in other folders)
